--- a/src/app/add-user/add-user.page.html
+++ b/src/app/add-user/add-user.page.html
@@ -1,27 +1,30 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>New User</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-back-button slot="end"></ion-back-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-<ion-card>
+<ion-card color="light">
   <form [formGroup]="addUser" (ngSubmit)="create()">
   <ion-card-title>User</ion-card-title>
   <ion-card-content>
-    <ion-toolbar color="primary">
+    <ion-toolbar color="medium">
     <ion-input  name="name" type="name" formControlName="name" placeholder="Name..." required></ion-input>
     </ion-toolbar>
     <ion-toolbar color="secondary">
       <ion-input  name="address" type="address" formControlName="address" placeholder="Address..." required></ion-input>
     </ion-toolbar>
     <ion-toolbar>
-    <ion-button slot="start" (click)="addPhone()">Add phone</ion-button>
-    <ion-button slot="end" (click)="addStudies()">Add studies</ion-button>
+    <ion-button slot="start" color="medium" (click)="addPhone()">Add phone</ion-button>
+    <ion-button slot="end" color="primary" (click)="addStudies()">Add studies</ion-button>
     </ion-toolbar>
     <ion-toolbar>
-      <ion-button (click)="create()">Add user</ion-button></ion-toolbar>
+      <ion-button expand="block" color="dark" (click)="create()">Add user</ion-button></ion-toolbar>
   </ion-card-content>
   </form>
 </ion-card>
