--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,13 +1,26 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Minimo 2
-    </ion-title>
+    <ion-title>School</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-back-button slot="end"></ion-back-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card color="secondary" class="vertical-margin" *ngFor="let subject of subjects">
-    <ion-toolbar color="secondary" (click)="changePage(subject._id)"> {{subject.name}}</ion-toolbar>
+  <ion-card color="light">
+    <ion-card-header>
+    <ion-card-title>Subjects</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+    <ion-card color="secondary" class="vertical-margin" *ngFor="let subject of subjects">
+      <ion-toolbar color="secondary">
+        {{subject.name}}
+        <ion-icon slot="end" name="add-circle-outline" (click)="changePage(subject._id)"></ion-icon>
+      </ion-toolbar>
+      <ion-toolbar color="medium"> Students in subject: {{subject.students.length}}</ion-toolbar>
+    </ion-card>
+    </ion-card-content>
   </ion-card>
 </ion-content>
