--- a/src/app/profile-student/profile-student.page.html
+++ b/src/app/profile-student/profile-student.page.html
@@ -2,18 +2,28 @@
   <ion-toolbar>
     <ion-title>ProfileStudent</ion-title>
     <ion-back-button slot="end"></ion-back-button>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card *ngIf="student" color="secondary" class="vertical-margin" >
+  <ion-card *ngIf="student" color="light" class="vertical-margin" >
+    <ion-card-header>
     <ion-card-title >{{student.name}}</ion-card-title>
-      <ion-toolbar>address:{{student.address}}</ion-toolbar>
-    <div *ngFor="let phone of student.phones">
-      <ion-toolbar>phones:{{phone.number}}</ion-toolbar>
-    </div>
-    <div *ngFor="let study of student.studies">
-    <ion-toolbar>studies:{{study.studies}}</ion-toolbar>
-    </div>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-card>
+      <ion-toolbar color="medium">Address:{{student.address}}</ion-toolbar>
+      </ion-card>
+    <ion-card *ngFor="let phone of student.phones">
+      <ion-toolbar color="secondary">Number: {{phone.number}}</ion-toolbar>
+      <ion-toolbar color="medium">Description: {{phone.description}}</ion-toolbar>
+    </ion-card>
+    <ion-card *ngFor="let study of student.studies">
+    <ion-toolbar color="medium">Studies: {{study.studies}}</ion-toolbar>
+    </ion-card>
+    </ion-card-content>
   </ion-card>
 </ion-content>
